get rid of javax.xml dependency, target java 8