@@ -19,6 +19,7 @@ import com.github.shyiko.mysql.binlog.event.deserialization.ColumnType;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.util.Base64;
 
 /**
  * A {@link JsonFormatter} implementation that creates a JSON string representation.
@@ -197,7 +198,7 @@ public class JsonStringFormatter implements JsonFormatter {
     @Override
     public void valueOpaque(ColumnType type, byte[] value) {
         sb.append('"');
-        sb.append(javax.xml.bind.DatatypeConverter.printBase64Binary(value));
+        sb.append(Base64.getEncoder().encodeToString(value));
         sb.append('"');
     }
 
